--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webdriverio Framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "wdio"
   },
   "author": "Jennifer Liu",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "mocha": "^7.1.2",
     "selenium-standalone": "^6.15.3",
     "wdio-mocha-framework": "^0.6.4",
+    "wdio-selenium-standalone-service": "0.0.12",
     "webdriverio": "^4.13.2"
   }
 }
