--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   "author": "Jennifer Liu",
   "license": "ISC",
   "devDependencies": {
+    "@wdio/cli": "^5.0.0",
+    "@wdio/local-runner": "^6.1.12",
+    "@wdio/mocha-framework": "^6.1.8",
+    "@wdio/sync": "^6.1.8",
     "chai": "^4.2.0",
     "del": "^5.1.0",
     "mocha": "^7.1.2",
     "selenium-standalone": "^6.15.3",
     "sync-request": "^6.1.0",
-    "wdio-allure-reporter": "^0.8.3",
-    "wdio-json-reporter": "^0.4.0",
-    "wdio-junit-reporter": "^0.4.4",
-    "wdio-mocha-framework": "^0.6.4",
-    "wdio-selenium-standalone-service": "0.0.12",
-    "webdriverio": "^4.13.2"
+    "webdriverio": "^5.4.17"
   }
 }
